* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 

* 2014-07-28 - lars.hoogestraat@open-xchange.com

 - Fix for bug 33577: Improved sanitizing of snippet management

* 2014-07-28 - thorben.betten@open-xchange.com

 - Fix for bug 33728: Drop SUBSCRIPTION bit from capabilities bit mask if not allowed

* 2014-07-26 - thorben.betten@open-xchange.com

 - Fix for bug 33620: Sanitize RSS feed's title, too

* 2014-07-22 - thorben.betten@open-xchange.com

 - Fix for bug 33441: Fixed calculation of "max-age" part in Cache-Control header from given expiry value
 - Fix for bug 31253: Quote-aware parsing of SIEVE script content + reverted changes from commit d695ca1965fbcb98b94ab6705962a2e9201fae3c

* 2014-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 33593: Properly XML-escape characters written to XML output
 - Fix for bug 33587: Do graceful shutdown and handle exceptions

* 2014-07-17 - thorben.betten@open-xchange.com

 - Fix for bug 33570: Order shut-down initiated timer and cleanse cache of registered Servlets once they are unregistered

* 2014-07-16 - lars.hoogestraat@open-xchange.com

 - Fix for bug 33552: Decode RFC2047 address headers before parsing

* 2014-07-16 - jan.bauerdick@open-xchange.com

 - Fix for bug 33547: Make parameter parsing more robust

* 2014-07-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 33505: Prevent wrong changing date being applied to parent folder upon folder deletion
 - Fix for bug 33447: Corrected the 'exclude context admin' condition in the search term passed down to the storage layer
 - Fix for bug 33576: Also consider contacts without e-mail address when auto-completing in the contacts find module

* 2014-07-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 33478: Run AttachmentCleaner without delay

* 2014-07-11 - thorben.betten@open-xchange.com
